--- a/index.html
+++ b/index.html
@@ -88,19 +88,15 @@
       url: 'http://csc-s-gis1-d:6080/arcgis/rest/services/Test/New_England/MapServer',
       opacity: 0.7
     }).addTo(map);
-    var fire = L.esri.dynamicMapLayer({
+    var fire = L.esri.featureLayer({
       url: 'http://gis.cityofboston.gov/arcgis/rest/services/PublicSafety/OpenData/MapServer/2/query?outFields=*&where=1%3D1',
-      opacity: 1
     }).addTo(map);
-    var schools = L.esri.dynamicMapLayer({
+    var schools = L.esri.featureLayer({
       url: 'http://gis.cityofboston.gov/arcgis/rest/services/Education/OpenData/MapServer/0/query?outFields=*&where=1%3D1',
-      opacity: 1
     }).addTo(map);
-    var police = L.esri.dynamicMapLayer({
+    var police = L.esri.featureLayer({
       url: 'http://gis.cityofboston.gov/arcgis/rest/services/PublicSafety/OpenData/MapServer/6/query?outFields=*&where=1%3D1',
-      opacity: 1
     }).addTo(map);
-    console.log(police);
   //  var tangram = Tangram.leafletLayer({
   //    scene: 'scene.yaml',
   //    attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a>'
