--- a/index.html
+++ b/index.html
@@ -90,7 +90,18 @@
     }).addTo(map);
     
     $.getJSON( "http://bostonopendata.boston.opendata.arcgis.com/datasets/092857c15cbb49e8b214ca5e228317a1_2.geojson", function(data) {
-      var fff = L.geoJson(data).addTo(map);
+      var marker = {
+        radius: 3,
+        fillColor: "#e41a1c",
+        weight: 1
+        opacity: 1
+        fillOpacity:0.8
+      };
+      L.geoJson(data, {
+        pointToLayer: function(feature,latlng){
+          return L.marker(latlng,marker);
+        }
+      }).addTo(map);
     });
       
   //  var tangram = Tangram.leafletLayer({
