--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       var geojsonMarkerOptions = {
         radius: 5,
         fillColor: "#e41a1c",
-        color: "#e41a1c"
+        color: "#e41a1c",
         weight: 1,
         opacity: 1,
         fillOpacity:0.8
