--- a/index.html
+++ b/index.html
@@ -24,30 +24,29 @@
     body { margin:0; padding:0; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
     
-    .legend {
-      line-height: 25px;
+  .legend {
+      line-height: 18px;
       color: #555;
-    }
-    .legend i {
+  }
+  .legend i {
       width: 18px;
       height: 18px;
       float: left;
       margin-right: 8px;
-      opacity: 0.8;
-    }
-    .info {
+      opacity: 0.7;
+  }
+  .info {
       padding: 6px 8px;
       font: 14px/16px Arial, Helvetica, sans-serif;
       background: white;
       background: rgba(255,255,255,0.8);
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
       border-radius: 5px;
-    }
-
-    .info h4 {
-        margin: 0 0 5px;
-        color: #777;
-    }
+  }
+  .info h4 {
+      margin: 0 0 5px;
+      color: #777;
+  }
   </style>
 </head>
 <body>
@@ -177,7 +176,7 @@
         }
       return div;
     }
-  //  legend.addTo(map);
+    legend.addTo(map);
 
   </script>
 </body>
