--- a/index.html
+++ b/index.html
@@ -166,13 +166,16 @@
     var legend = L.control({position: 'bottomright'});
     legend.onAdd = function(map) {
       var div = L.DomUtil.create('div', 'info legend'),
+        labels = ['<strong> Sea Level Rise (m) </strong>'],
         grades = [0, 2, 4, 6, 8, 10],
-        color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'],
-        labels = ['<strong> Sea Level Rise (m) </strong>'];
+        color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'];
       for (var i = 0; i < grades.length; i++) {
         div.innerHTML +=
+        labels.push(
           '<i style="background:' + color[i] + '"></i> ' +
-          grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+          (grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+'));
+        //  '<i style="background:' + color[i] + '"></i> ' +
+        //  grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
         }
       return div;
     };
