--- a/index.html
+++ b/index.html
@@ -171,11 +171,8 @@
         color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'];
       for (var i = 0; i < grades.length; i++) {
         div.innerHTML +=
-        labels.push(
           '<i style="background:' + color[i] + '"></i> ' +
-          (grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+'));
-        //  '<i style="background:' + color[i] + '"></i> ' +
-        //  grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+          grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
         }
       return div;
     };
