--- a/index.html
+++ b/index.html
@@ -166,15 +166,17 @@
     var legend = L.control({position: 'bottomright'});
     legend.onAdd = function(map) {
       var div = L.DomUtil.create('div', 'info legend'),
-        grades = [0, 2, 4, 6, 8, 10, 20],
+        grades = [0, 2, 4, 6, 8, 10,'+'],
         color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'],
         labels = ['<strong>Sea Level Rise (m)</strong>'];
       for (var i = 0; i < grades.length; i++) {
         div.innerHTML +=
+        labels.push(
           '<i style="background:' + color[i] + '"></i> ' +
-          grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] + '<br>' : '+');
+          grades[i] + '&ndash;' + grades[i + 1]);
         }
-      return div;
+        div.innerHTML=labels.join('<br>');
+        return div;
     };
     legend.addTo(map);
 
