--- a/index.html
+++ b/index.html
@@ -167,13 +167,14 @@
     legend.onAdd = function(map) {
       var div = L.DomUtil.create('div', 'info legend'),
         grades = [0, 2, 4, 6, 8, 10],
+        ugrades = [2,4,6,8,10,'+'],
         color = ['#c6dbef','#9ecae1','#6baed6','#4292c6','#2171b5','#084594'],
         labels = ['<strong>Sea Level Rise (m)</strong>'];
       for (var i = 0; i < grades.length; i++) {
         div.innerHTML +=
         labels.push(
           '<i style="background:' + color[i] + '"></i> ' +
-          grades[i] + '&ndash;' + grades[i + 1]);
+          grades[i] + '&ndash;' + ugrades[i]);
         }
         div.innerHTML=labels.join('<br>');
         return div;
