--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
   <style>
     body { margin:0; padding:0; }
     #map { position:absolute; top:0; bottom:0; width:100%; }
-    
+  .info {
+    padding: 16px 18px;
+    font: 10px/12px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 10px;
+  }
+    .info h4 {
+    margin: 0 0 5px;
+    color: #777;
+  }
   .legend {
       line-height: 18px;
       color: #555;
